# DotGhostBoard

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  roadmap(v1.x).json  roadmap(v1.x).md  roadmap(v2.x).md  roadmap(v3.x).md  todo_list(v1.0.0).json  todo_list(v1.1.0).json  todo_list(v1.2.0).json  todo_list(v1.3.0).json  todo_list(v1.4.0).json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  tests.yml
cli/: dotghost.py
core/: api_server.py  app_filter.py  config.py  crypto.py  hotkey.py  media.py  network_discovery.py  pairing.py  paths.py  secure_delete.py  storage.py  sync_engine.py  thumbnailer.py  updater.py  watcher.py
data/: dotghostboard.appdata.xml  settings.json
node2/: settings.json
scripts/: build_appimage.sh  build_deb.sh  generate_doc_assets.py  generate_icon.py  install.sh  setup_autostart.py
snap/: snapcraft.yaml
tests/: requirements.txt  test_api.py  test_eclipse.py  test_media.py  test_settings.py  test_storage.py  test_storage_v120.py  test_storage_v130.py  test_thumbnailer.py  test_updater_core.py
ui/: dashboard.py  ghost.qss  image_viewer.py  lock_screen.py  new.py  pairing_dialog.py  purge_easter_egg.py  settings.py  updater_dialog.py  widgets.py
