[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotghostboard"
version = "1.5.3"
description = "Advanced clipboard manager for Linux — DotSuite"
readme = "README.md"
license = {text = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "FreeRave", email = "kareem209907@gmail.com"},
]
keywords = ["clipboard", "manager", "pyqt6", "linux", "dotsuite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6",
    "Pillow",
    "cryptography",
    "packaging",
    "zeroconf",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/kareem2099/DotGhostBoard"
Repository = "https://github.com/kareem2099/DotGhostBoard"
Issues = "https://github.com/kareem2099/DotGhostBoard/issues"

[project.scripts]
dotghostboard = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "data*"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.json", "*.png", "*.svg"]
